subiendo cambios de sidebar

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	    <meta charset="UTF-8">
 	    <title>Menu</title>
 	    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	    <link rel="stylesheet" href="css/main.css">
-	    <link rel="stylesheet" href="fonts.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/main.css">
         </head>
     <body>
 		<div class="container-fluid">
@@ -92,7 +92,7 @@
 						</div>
 						<div class="col-lg-6">
 							<button role="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo2" aria-expanded="true">
-							   vertical collapsible
+							vertical collapsible
 							</button>
 							<div id="demo2" class="height collapse show" aria-expanded="true">
 								<div>
